@@ -70,3 +70,4 @@
 20170220 ./watchlist/hia-scan-tcp.sh updated.
 20170220 ./watchlist/hia-scan-udp.sh updated.
 20231024 ./watchlist/l.sh updated.
+20231024 ./watchlist/hia-iplist.sh updated.
